mysqldeployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: myapp-mysql
spec: 
  replicas: 1 
  selector:  
    matchLabels: 
      app: mysql 
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app: mysql
    spec: #this spec if related to your container
      containers:
      - name: mysql 
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mysql-persistent-volume
            mountPath: /var/lib/mysql
          - name: usermgmt-dbscript 
            mountPath: /docker-entrypoint-initdb.d
      volumes: 
        - name: mysql-persistent-volume
          persistentVolumeClaim:
            claimName: task-pv-claim 
        - name: usermgmt-dbscript
          configMap:
            name: userdb-creation-script
