state-mysql.yml
apiVersion: apps/v1 
kind: StatefulSet
metadata:
  name: mysql-state
spec: 
  replicas: 3 
  selector:  
    matchLabels: 
      app: mysql 
  
  template:
    
    metadata:
      labels:
        app: mysql
    spec: #this spec if related to your container
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql 
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mysql-persistent-volume
            mountPath: /var/lib/mysql
          - name: usermgmt-dbscript 
            mountPath: /docker-entrypoint-initdb.d
      volumes: 
        - name: mysql-persistent-volume
          persistentVolumeClaim:
            claimName: task-pv-claim-state
        - name: usermgmt-dbscript
          configMap:
            name: userdb-creation-script
