state-mysql-service.yml
apiVersion: v1 
kind: Service 
metadata:
  name: mysql 
  labels:
    app: mysql
spec: 
  ports:
    - port: 3306 
  clusterIP: None 
  selector:
    app: mysql
